log/build_2025-03-27_20-04-13/opencv_package/stderr.log
  File "/home/sandra/common_project_ws/install/opencv_package/lib/python3.8/site-packages/opencv_package/image_subscriber.py", line 18
    '/detection_image,
                     ^
SyntaxError: EOL while scanning string literal

